--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
-== README
+== hylotodo
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A simple AJAX/Rails todo list.
 
-Things you may want to cover:
+Features:
 
-* Ruby version
+* Add items
 
-* System dependencies
+* Delete items
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
